# brick_game

./: CMakeLists.txt  Makefile  README.md
include/brick_game/: backend.h  colors.h
include/brick_game/snake/: controler.h  events.h  field.h  fsm.h  input_mapping.h  mediator.h  move_timer.h  observable.h  simple_file_storage.h  snake.h  snake_model.h  stats_keeper.h
include/brick_game/tetris/: game_data.h  highscore_keeper.h  tetromino_inner.h  tetromino_mover_inner.h
include/gui/cli/: frontend.h  games_finder.h  path_utils.h
include/gui/desktop/: brickview.h  confirmexit.h  gamescreen.h  mainwidget.h
misc/: valgrind.supp
scripts/: brickgame.tex  install.sh  uninstall.sh
src/: Doxyfile  Makefile  install.sh  ncurses.supp
src/brick_game/: backend.h
src/brick_game/snake/: CMakeLists.txt  Makefile  backend.cc  fsm.cc  snake.cc  snake_model.cc
src/brick_game/tetris/: CMakeLists.txt  Makefile  backend.h  controller.c  controller.h  game_data.c  highscore_keeper.c  highscore_keeper.h  movement_queue.c  movement_queue.h  tetromino.c  tetromino.h  tetromino_mover.c  tetromino_mover.h
src/brick_game/tetris/tests/: controller_test.c  hs_keeper_test.c  mv_queue_test.c  test.c  test.h  tetr_mover_test.c  tetromino_test.c
src/gui/cli/: CMakeLists.txt  Makefile  frontend.c  frontend.h  game_field.c  game_field.h  games_finder.c  games_finder.h  input.c  input.h  interface_loader.c  interface_loader.h  menu_navigation.c  menus.c  menus.h  path_utils.c
src/gui/desktop/: CMakeLists.txt  brickview.cpp  gamescreen.cpp  gamescreen.ui  mainwidget.cpp  mainwidget.ui
tests/snake/: CMakeLists.txt  controler_test.cc  field_test.cc  fsm_test.cc  input_deduction_test.cc  move_timer_test.cc  snake_model_test.cc  snake_test.cc  stats_keeper_test.cc
tests/tetris/: CMakeLists.txt  controller_test.c  mv_queue_test.c  test.c  test.h  tetr_mover_test.c  tetromino_test.c
